[CSS Shapes] shape-outside layout incorrect when line spans rounded box rounded corners https://bugs.webkit.org/show_bug.cgi?id=126528

Reviewed by Andreas Kling.

Source/WebCore:

BoxShape::getExcludedIntervals() now checks for the special case where the line spans the
top and bottom rounded corners - which implies that the excluded interval is the box's
horizontal extent.

Test: fast/shapes/shape-outside-floats/shape-outside-line-spans-box-corners.html

* rendering/shapes/BoxShape.cpp:
(WebCore::BoxShape::getExcludedIntervals):

LayoutTests:

Verify that a line that spans a shape-outside box's top and bottom rounded corners begins
at the box's right edge.

* fast/shapes/shape-outside-floats/shape-outside-line-spans-box-corners-expected.html: Added.
* fast/shapes/shape-outside-floats/shape-outside-line-spans-box-corners.html: Added.


Canonical link: https://commits.webkit.org/144481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161434 268f45cc-cd09-0410-ab3c-d52691b4dbfc